--- a/server/package.json
+++ b/server/package.json
@@ -18,9 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
-    "chokidar": "^2.0.3",
     "express": "^4.16.3",
-    "node-xlsx": "^0.12.1",
-    "opn": "^5.3.0"
+    "node-xlsx": "^0.12.1"
   }
 }
